--- a/UserList/UserList.csproj
+++ b/UserList/UserList.csproj
@@ -45,14 +45,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Module\ILoginService.cs" />
+    <Compile Include="Module\IMainService.cs" />
+    <Compile Include="Module\IRegistrationService.cs" />
+    <Compile Include="Module\ISource.cs" />
+    <Compile Include="Module\LoginService.cs" />
+    <Compile Include="Module\MainService.cs" />
+    <Compile Include="Module\RegistrationService.cs" />
+    <Compile Include="Module\User.cs" />
+    <Compile Include="Module\XMLService.cs" />
+    <Compile Include="Presenter\AuthenticationPresenter.cs" />
+    <Compile Include="Presenter\IPresenter.cs" />
+    <Compile Include="Presenter\MainPresenter.cs" />
+    <Compile Include="Presenter\RegistrationPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AuthenticationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AuthenticationView.Designer.cs">
+      <DependentUpon>AuthenticationView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\IAuthenticationView.cs" />
+    <Compile Include="View\IMainView.cs" />
+    <Compile Include="View\IRegistrationView.cs" />
+    <Compile Include="View\IView.cs" />
+    <Compile Include="View\MainView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\MainView.Designer.cs">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\RegistrationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\RegistrationView.Designer.cs">
+      <DependentUpon>RegistrationView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,7 +90,17 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\AuthenticationView.resx">
+      <DependentUpon>AuthenticationView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\MainView.resx">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\RegistrationView.resx">
+      <DependentUpon>RegistrationView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -74,6 +113,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Correct.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Incorrect.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
